--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Minifies HTML,CSS,JS to one single index.html file",
   "main": "index.js",
   "scripts": {
-    "singlehtml": "node index.js index.html true"
+    "test": "node index.js index.html true"
   },
+  "bin":{"singlehtml":"node index.js index.html true"},
   "author": "",
   "license": "ISC",
   "dependencies": {
